[project]
name = "langchaindemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "defusedxml>=0.7.1",
    "dotenv>=0.9.9",
    "grandalf>=0.8",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "loguru>=0.7.3",
]
